Bug 35042 - Previous color applied instead of latest "no fill" for "highlighting".
Summary: Previous color applied instead of latest "no fill" for "highlighting".
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: low minor
Assignee: Aldo Román Nureña
URL:
Whiteboard: color_handling target:3.6.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2011-03-05 11:40 UTC by themarmoth
Modified: 2015-12-15 22:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
PATCH (1.34 KB, patch)
2012-04-08 20:09 UTC, Aldo Román Nureña
Details

Note You need to log in before you can comment on or make changes to this bug.
Description themarmoth 2011-03-05 11:40:20 UTC
After choosing "no background" color, the previous color is applied.

This happens only with "no background", not with other normal colors.

This happens only when clicking on the button afterwards (the time where you choose "no background", the selected text color is properly set to "no background").
Comment 1 Rainer Bielefeld Retired 2011-03-06 00:13:17 UTC
[Reproducible] with "LibreOffice 3.3.1  – WIN7  Home Premium  (64bit) English UI [OOO330m19 (build 8 / tag 3.3.1.2)]"

Steps to reproduce
1. open new WRITER document
2. type 3 words
3. select one word by double click
4. open character background color picker by long click on 'Highlighting' icon
5. Select "light red" by click
   picker closes. Character background becomes "light red"
6. select second word and apply background color by clicking 
   'Highlighting' icon.
   as expected background becomes "light red" because icon showed that color as 
   latest selection
7. select first word
8. open 'Highlighting' color picker and select "no fill"
   as expected, red background for word disappears and color mark below icon
   becomes empty for "no fill"
9. Double click third word 
10. click 'Highlighting' icon.
   expected: nothing, because latest selection "no fill" should be applied
             (what also is shown in color mark below icon)
   actual: background red for latest background COLOR selection

Additionally strange: this latest COLOR selection ("Light red") will be stored when you close LibO. After reopen in a new document, 'Highlighting' icon color mark will still show "no fill", but wehn you type some characters, select them and click on 'Highlighting' icon background will become red
Comment 2 Björn Michaelsen 2011-11-22 14:53:36 UTC
EasyHackyfing.
Comment 3 Björn Michaelsen 2011-12-23 11:52:09 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 Björn Michaelsen 2011-12-23 12:56:57 UTC
An EasyHack should have been checked by developers and thus is confirmed regardless of age. Moving back to NEW from NEEDINFO again. Sorry for the hassle.
Comment 5 Rainer Bielefeld Retired 2012-01-09 22:21:39 UTC
This one seems to be fixed in 3.4.5 for Font color and Font background ("highlighting"), but not for paragraph background.

Please decide whether this one should be closed or "Bug 44611 - UI: Paragraph Background Color picker behavior inconsistent"should be marked as a DUP of this one.

1 "EasyHack" is enough
Comment 6 Rainer Bielefeld Retired 2012-01-25 13:31:06 UTC
No idea what I believed to see, this one is not fixed for 3.4.5, also not for 3.5.0 RC2
Comment 7 Stefan Knorr 2012-02-06 01:37:36 UTC
@Rainer, comment 5: This is a completely different issue than 44611. So, all, please don't mark this or the other bug as a dupe.
Comment 8 Rainer Bielefeld Retired 2012-04-07 11:10:10 UTC
@aldo.roman.nurena@gmail.com:
<http://wiki.documentfoundation.org/BugReport_Details#Version>
Please let us know your further results.
Comment 9 Aldo Román Nureña 2012-04-08 20:09:07 UTC
Created attachment 59660 [details]
PATCH

I got a patch. There was a missing line when "no fill" was the last selection.
Comment 10 Not Assigned 2012-04-10 04:46:50 UTC
Aldo Roman Nureña committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37af4b002422f889ceecc21474a4b049f516b72e

fdo#35042: previous color applied instead of "no fill"
Comment 11 Rainer Bielefeld Retired 2012-04-10 20:59:51 UTC
<http://wiki.documentfoundation.org/BugReport_Details#Version>

@Aldo:
Thank you for the patch!
Comment 12 Robinson Tryon (qubit) 2015-12-15 22:49:49 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyBeginner SkillCpp TopicUi )
[NinjaEdit]