fdo#35042: previous color applied instead of "no fill"

There was a missing line when last select highlight color was "no fill"